address overflow issue with coltopics general section

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -2339,7 +2339,9 @@ table.mod-data-default-template {
     }
 }
 */
-
+body.format-topcoll ul.ctopics #section-0 .content .summary .no-overflow {
+	overflow: inherit;
+}
 
 body.editing.format-topcoll .section .activity.modtype_label.label .no-overflow .no-overflow {
     margin-right: 7.25em;
